--- a/main.html
+++ b/main.html
@@ -10,11 +10,22 @@
 	<script>
 		function secondHighest(arr) {
 			//Write your code here
+			for(let i=0;i<arr.length;i++){
+              for(let j=0;j<arr.length;j++){
+				  if(arr[i]<=arr[j+1]){
+					  let temp=arr[i];
+					  arr[i]=arr[j];
+					  arr[j]=temp;
+					  
+				  }
+			  }
+			  }
+			return arr[length-2];
 			
 		}
 
 		function Main() {
-			var n = prompt("Enter the number of elements");
+			//var n = prompt("Enter the number of elements");
 			var arr = [];
 			for (var i = 0; i < n; i++) {
 				arr[i] = prompt("Enter element " + (i+1));
