--- a/main.html
+++ b/main.html
@@ -10,9 +10,13 @@
 	<script>
 		function secondHighest(arr) {
 			//Write your code here
+			if(arr.length<=1){
+				return -1;
+			}
+			
 			for(let i=0;i<arr.length;i++){
               for(let j=0;j<arr.length;j++){
-				  if(arr[i]<=arr[j+1]){
+				  if(arr[i]>arr[j+1]){
 					  let temp=arr[i];
 					  arr[i]=arr[j];
 					  arr[j]=temp;
@@ -25,7 +29,7 @@
 		}
 
 		function Main() {
-			var n = prompt("Enter the number of elements");
+			//var n = prompt("Enter the number of elements");
 			var arr = [];
 			for (var i = 0; i < n; i++) {
 				arr[i] = prompt("Enter element " + (i+1));
