--- a/main.html
+++ b/main.html
@@ -10,21 +10,24 @@
 	<script>
 		function secondHighest(arr) {
 			//Write your code here
-			if(arr.length<=1){
-				return -1;
+			if(arr.length<2){
+				return -Infinity;
+				
 			}
-			
+			let highest=-Infinity;
+			let secondHighest=-Infinity;
 			for(let i=0;i<arr.length;i++){
-              for(let j=0;j<arr.length;j++){
-				  if(arr[i]>arr[j+1]){
-					  let temp=arr[i];
-					  arr[i]=arr[j];
-					  arr[j]=temp;
-					  
-				  }
-			  }
-			  }
-			return arr[length-2];
+				if(arr[i]>highest){
+					secondHighest=highest;
+					highest=arr[i];
+				}else if(arr[i]>secondHighest && arr[i]!=highest){
+					secondHighest=arr[i];
+				}
+			}
+			if(secondHighest==-Infinity){
+				return -Infinity;
+			}
+			return secondHighest;
 			
 		}
 
